--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a href="#"> Contact </a></li>
 			<li><a href="#"> Search </a></li>
 			<li><a href="#"> Log In</a></li>
+			<li><a href="#"> Shops</a></li>
 			<li><a href="#"> 💟 </a></li>
 		</ul>
 		</nav>		
